tests/analysis/snapshots/r#mod__analysis__alpha034__function_definition-6.snap
---
source: tests/analysis/alpha034.rs
expression: b_defs.get(&17)
---
Some(
    SymbolLocation {
        file: (
            FileId(
                0,
            ),
            FileVersion(
                1,
            ),
        ),
        start: 16,
        end: 17,
    },
)
