tests/analysis/snapshots/r#mod__analysis__alpha034__function_definition-7.snap
---
source: tests/analysis/alpha034.rs
expression: b_defs.get(&60)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 33,
        end: 34,
        is_public: false,
    },
)
