tests/analysis/snapshots/r#mod__analysis__alpha034__function_definition.snap
---
source: tests/analysis/alpha034.rs
expression: "foo_defs.get(&usize::MAX)"
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 9,
        end: 12,
        is_public: false,
    },
)
