tests/analysis/snapshots/r#mod__analysis__alpha034__generic_type_inference-3.snap
---
source: tests/analysis/alpha034.rs
expression: foo_symbol.data_type.to_string(&backend.generic_types)
---
"Any | Num | Text"
