tests/analysis/snapshots/r#mod__analysis__alpha034__generics_reference-2.snap
---
source: tests/analysis/alpha034.rs
expression: "arguments.iter().map(|(name, ty)|\n(name.clone(), ty.to_string(&backend.generic_types))).collect::<Vec<_>>()"
---
[
    (
        "a",
        "Num | Text | [Num | Text]",
    ),
    (
        "b",
        "Num | Text | [Num | Text]",
    ),
]
