tests/analysis/snapshots/r#mod__analysis__alpha034__generics_reference.snap
---
source: tests/analysis/alpha034.rs
expression: backend.files.generic_types.to_string()
---
"Num | Text | [Num | Text]\nNum | Text | [Num | Text]"
