tests/analysis/snapshots/r#mod__analysis__alpha034__import_all_symbols-2.snap
---
source: tests/analysis/alpha034.rs
expression: foo_refs
---
[
    SymbolLocation {
        file: FileId(
            1,
        ),
        start: 33,
        end: 36,
        is_public: false,
    },
]
